--- a/404.html
+++ b/404.html
@@ -11,16 +11,16 @@
 <link rel="stylesheet" href="/css/components.css" />
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>404 | Page not found</title>
-<meta name="robots" content="noindex" />
+<meta name="description" content="Page not found." />
 </head><body>
 <div data-include="partials/header.html"></div>
 <main id="main" class="container">
-<header class="page-header"><h1>Page not found</h1><p class="subtitle">The page you’re looking for doesn’t exist.</p></header>
-<p><a href="/">← Back to home</a></p>
+<header class="page-header"><h1>Page not found</h1><p class="subtitle">The page you’re looking for doesn’t exist.</p></header><p><a href="/">← Back to home</a></p>
 </main>
 <div data-include="partials/footer.html"></div>
 <script src="/js/include.js"></script>
 <script src="/js/theme.js"></script>
 <script src="/js/menu.js"></script>
 <script src="/js/nav-active.js"></script>
+
 </body></html>
