--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -13,50 +12,47 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>Santhosh Kumar Chandrashekar | Portfolio Architect</title>
 <meta name="description" content="Cloud and DevOps portfolio strategy, migration, and modernization." />
-</head>
-<body>
-  <div data-include="partials/header.html"></div>
-  <main id="main" class="container">
-  <section class="hero">
-    <img src="/assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" />
-    <div>
-      <h1>Santhosh Kumar Chandrashekar</h1>
-      <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Strategy Leader</p>
-      <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value.</p>
-    </div>
-  </section>
+</head><body>
+<div data-include="partials/header.html"></div>
+<main id="main" class="container">
+<section class="hero">
+  <img src="/assets/images/profile.webp" alt="Santhosh Kumar Chandrashekar" class="profile-pic" />
+  <div>
+    <h1>Santhosh Kumar Chandrashekar</h1>
+    <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Strategy Leader</p>
+    <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value.</p>
+  </div>
+</section>
 
-  <section class="focus-grid" aria-labelledby="focusTitle">
-    <h2 id="focusTitle">Strategic Focus Areas</h2>
-    <div class="grid">
-      <article class="card"><img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture &amp; Target-State Design" /><h3>Enterprise Architecture &amp; Target-State Design</h3><p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p></article>
-      <article class="card"><img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration &amp; Modernisation" /><h3>Cloud Strategy, Migration &amp; Modernisation</h3><p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p></article>
-      <article class="card"><img src="/assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones &amp; Platform Engineering" /><h3>Cloud Landing Zones &amp; Platform Engineering</h3><p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p></article>
-      <article class="card"><img src="/assets/images/focus-devsecops.webp" alt="DevSecOps &amp; Delivery Enablement" /><h3>DevSecOps &amp; Delivery Enablement</h3><p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p></article>
-      <article class="card"><img src="/assets/images/focus-governance.webp" alt="Cloud Governance, Security &amp; Compliance" /><h3>Cloud Governance, Security &amp; Compliance</h3><p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p></article>
-      <article class="card"><img src="/assets/images/focus-roadmapping.webp" alt="Technology Roadmapping &amp; Portfolio Advisory" /><h3>Technology Roadmapping &amp; Portfolio Advisory</h3><p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p></article>
-    </div>
-  </section>
+<section class="focus-grid" aria-labelledby="focusTitle">
+  <h2 id="focusTitle">Strategic Focus Areas</h2>
+  <div class="grid">
+    <article class="card"><img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture" /><h3>Enterprise Architecture &amp; Target-State Design</h3><p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p></article>
+    <article class="card"><img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy" /><h3>Cloud Strategy, Migration &amp; Modernisation</h3><p>Shaping cloud adoption and modernising digital platforms for resilience, security, and scale.</p></article>
+    <article class="card"><img src="/assets/images/focus-landing-zones.webp" alt="Landing Zones" /><h3>Cloud Landing Zones &amp; Platform Engineering</h3><p>Designing secure, compliant cloud platforms that accelerate delivery across portfolios.</p></article>
+    <article class="card"><img src="/assets/images/focus-devsecops.webp" alt="DevSecOps" /><h3>DevSecOps &amp; Delivery Enablement</h3><p>Standardising pipelines and enabling teams through secure, automated delivery practices.</p></article>
+    <article class="card"><img src="/assets/images/focus-governance.webp" alt="Governance" /><h3>Cloud Governance, Security &amp; Compliance</h3><p>Establishing guardrails, policy, and cost controls for responsible, sustainable cloud operations.</p></article>
+    <article class="card"><img src="/assets/images/focus-roadmapping.webp" alt="Roadmapping" /><h3>Technology Roadmapping &amp; Portfolio Advisory</h3><p>Creating multi-year roadmaps that align platform strategy with business outcomes.</p></article>
+  </div>
+</section>
 
-  <section class="case-grid-compact" aria-labelledby="homeInitTitle">
-    <h2 id="homeInitTitle">Featured Initiatives</h2>
-    <p class="section-note">A few selected initiatives.</p>
-    <div class="grid" id="homeInitiatives"><p class="section-note">Loading initiatives…</p></div>
-  </section>
+<section class="case-grid-compact" aria-labelledby="homeInitTitle">
+  <h2 id="homeInitTitle">Featured Initiatives</h2>
+  <p class="section-note">A few selected initiatives.</p>
+  <div class="grid" id="homeInitiatives"><p class="section-note">Loading initiatives…</p></div>
+</section>
 
-  <section class="insights-grid" aria-labelledby="homeInsightsTitle">
-    <h2 id="homeInsightsTitle">Latest Insights</h2>
-    <p class="section-note">Recent articles.</p>
-    <div class="grid" id="homeInsights"><p class="section-note">Loading insights…</p></div>
-  </section>
+<section class="insights-grid" aria-labelledby="homeInsightsTitle">
+  <h2 id="homeInsightsTitle">Latest Insights</h2>
+  <p class="section-note">Recent articles.</p>
+  <div class="grid" id="homeInsights"><p class="section-note">Loading insights…</p></div>
+</section>
 
-  </main>
-  <div data-include="partials/footer.html"></div>
-  <script src="/js/include.js"></script>
-  <script src="/js/theme.js"></script>
-  <script src="/js/menu.js"></script>
-  <script src="/js/nav-active.js"></script>
-  <script src="/js/home.js"></script>
-
-</body>
-</html>
+</main>
+<div data-include="partials/footer.html"></div>
+<script src="/js/include.js"></script>
+<script src="/js/theme.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/nav-active.js"></script>
+<script src="/js/home.js"></script>
+</body></html>
