--- a/focus/index.html
+++ b/focus/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -12,17 +13,31 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>Focus | Santhosh Kumar</title>
 <meta name="description" content="Strategic focus areas and strengths." />
-</head><body>
-<div data-include="partials/header.html"></div>
-<main id="main" class="container">
-<header class="page-header"><h1>Focus</h1><p class="subtitle">Core areas where I lead strategy and deliver outcomes.</p></header>
-<section class="focus-grid"><div class="grid">(Replace with your focus cards)</div></section>
+</head>
+<body>
+  <div data-include="partials/header.html"></div>
+  <main id="main" class="container">
+  <header class="page-header">
+    <h1>Focus</h1>
+    <p class="subtitle">Core areas where I lead strategy and deliver outcomes.</p>
+  </header>
+  <section class="focus-grid">
+    <div class="grid">
+      <article class="card"><img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture &amp; Target-State Design" /><h3>Enterprise Architecture &amp; Target-State Design</h3><p>Operating models, target-state architecture, and decision guardrails to drive clarity at scale.</p></article>
+      <article class="card"><img src="/assets/images/focus-cloud-strategy.webp" alt="Cloud Strategy, Migration &amp; Modernisation" /><h3>Cloud Strategy, Migration &amp; Modernisation</h3><p>Cloud adoption strategy, migration planning, modernization waves, and value realization.</p></article>
+      <article class="card"><img src="/assets/images/focus-landing-zones.webp" alt="Cloud Landing Zones &amp; Platform Engineering" /><h3>Cloud Landing Zones &amp; Platform Engineering</h3><p>Secure-by-default landing zones, platform blueprints, and paved paths for teams.</p></article>
+      <article class="card"><img src="/assets/images/focus-devsecops.webp" alt="DevSecOps &amp; Delivery Enablement" /><h3>DevSecOps &amp; Delivery Enablement</h3><p>Pipeline standards, SDLC controls, automation, and developer experience improvements.</p></article>
+      <article class="card"><img src="/assets/images/focus-governance.webp" alt="Cloud Governance, Security &amp; Compliance" /><h3>Cloud Governance, Security &amp; Compliance</h3><p>Policies, guardrails, cost governance, and security controls aligned to risk appetite.</p></article>
+      <article class="card"><img src="/assets/images/focus-roadmapping.webp" alt="Technology Roadmapping &amp; Portfolio Advisory" /><h3>Technology Roadmapping &amp; Portfolio Advisory</h3><p>Multi-year roadmaps aligned to business outcomes, dependencies, and sequencing.</p></article>
+    </div>
+  </section>
 
-</main>
-<div data-include="partials/footer.html"></div>
-<script src="/js/include.js"></script>
-<script src="/js/theme.js"></script>
-<script src="/js/menu.js"></script>
-<script src="/js/nav-active.js"></script>
+  </main>
+  <div data-include="partials/footer.html"></div>
+  <script src="/js/include.js"></script>
+  <script src="/js/theme.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/nav-active.js"></script>
 
-</body></html>
+</body>
+</html>
