--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -12,19 +13,26 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>About | Santhosh Kumar</title>
 <meta name="description" content="About Santhosh Kumar Chandrashekar." />
-</head><body>
-<div data-include="partials/header.html"></div>
-<main id="main" class="container">
-<header class="page-header"><h1>About</h1><p class="subtitle">Background, principles, and what I optimize for.</p></header>
-<section>
-<p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations.</p>
-</section>
+</head>
+<body>
+  <div data-include="partials/header.html"></div>
+  <main id="main" class="container">
+  <header class="page-header">
+    <h1>About</h1>
+    <p class="subtitle">Background, principles, and what I optimize for.</p>
+  </header>
+  <section>
+    <p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. Today, I specialise in Cloud &amp; DevOps Portfolio Architecture within the Enterprise Architecture structure, focusing on target-state design, technology roadmapping, and platform strategies that reduce complexity and enable sustainable enterprise transformation.</p>
+    <p><strong><em>At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction.</em></strong></p>
+    <p>My goal is to design technology foundations and roadmaps that evolve with the organisation, support modern ways of working, and deliver long-term business value.</p>
+  </section>
 
-</main>
-<div data-include="partials/footer.html"></div>
-<script src="/js/include.js"></script>
-<script src="/js/theme.js"></script>
-<script src="/js/menu.js"></script>
-<script src="/js/nav-active.js"></script>
+  </main>
+  <div data-include="partials/footer.html"></div>
+  <script src="/js/include.js"></script>
+  <script src="/js/theme.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/nav-active.js"></script>
 
-</body></html>
+</body>
+</html>
