--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -12,20 +13,29 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>Contact | Santhosh Kumar</title>
 <meta name="description" content="Contact details." />
-</head><body>
-<div data-include="partials/header.html"></div>
-<main id="main" class="container">
-<header class="page-header"><h1>Contact</h1><p class="subtitle">Ways to connect.</p></header>
-<section>
-  <p><a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a></p>
-  <p><a href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-</section>
+</head>
+<body>
+  <div data-include="partials/header.html"></div>
+  <main id="main" class="container">
+  <header class="page-header">
+    <h1>Contact</h1>
+    <p class="subtitle">Ways to connect.</p>
+  </header>
+  <section>
+    <p class="contact-cta">
+      <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">
+        <span>LinkedIn</span>
+      </a>
+    </p>
+    <p class="contact-email"><strong>Email:</strong> <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a></p>
+  </section>
 
-</main>
-<div data-include="partials/footer.html"></div>
-<script src="/js/include.js"></script>
-<script src="/js/theme.js"></script>
-<script src="/js/menu.js"></script>
-<script src="/js/nav-active.js"></script>
+  </main>
+  <div data-include="partials/footer.html"></div>
+  <script src="/js/include.js"></script>
+  <script src="/js/theme.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/nav-active.js"></script>
 
-</body></html>
+</body>
+</html>
