--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
@@ -12,20 +13,31 @@
 <link rel="stylesheet" href="/css/utilities.css" />
 <title>Initiatives | Santhosh Kumar</title>
 <meta name="description" content="Strategic initiatives led." />
-</head><body>
-<div data-include="partials/header.html"></div>
-<main id="main" class="container">
-<header class="page-header"><h1>Initiatives</h1><p class="subtitle">Strategic initiatives led — click a card for details.</p></header>
-<section class="case-grid-compact">
-  <div class="grid" id="initiativesContainer"><p class="section-note">Loading initiatives…</p></div>
-  <div class="pagination-controls"><button id="initPrev" disabled>← Previous</button><span id="initPageInfo" class="page-info"></span><button id="initNext">Next →</button></div>
-</section>
+</head>
+<body>
+  <div data-include="partials/header.html"></div>
+  <main id="main" class="container">
+  <header class="page-header">
+    <h1>Initiatives</h1>
+    <p class="subtitle">Strategic initiatives led — click a card for details.</p>
+  </header>
+  <section class="case-grid-compact">
+    <div class="grid" id="initiativesContainer"><p class="section-note">Loading initiatives…</p></div>
+    <div class="pagination-controls">
+      <button id="initPrev" disabled>← Previous</button>
+      <span id="initPageInfo" class="page-info"></span>
+      <button id="initNext">Next →</button>
+    </div>
+  </section>
 
-</main>
-<div data-include="partials/footer.html"></div>
-<script src="/js/include.js"></script>
-<script src="/js/theme.js"></script>
-<script src="/js/menu.js"></script>
-<script src="/js/nav-active.js"></script>
-<script src="/js/pagination.js"></script><script>setupPagination({dataUrl:'/data/initiatives.json',containerId:'initiativesContainer',prevBtnId:'initPrev',nextBtnId:'initNext',pageInfoId:'initPageInfo',ctaText:'More details →',perPage:6});</script>
-</body></html>
+  </main>
+  <div data-include="partials/footer.html"></div>
+  <script src="/js/include.js"></script>
+  <script src="/js/theme.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/nav-active.js"></script>
+  <script src="/js/pagination.js"></script>
+  <script>setupPagination({dataUrl:'/data/initiatives.json',containerId:'initiativesContainer',prevBtnId:'initPrev',nextBtnId:'initNext',pageInfoId:'initPageInfo',ctaText:'More details →',perPage:6});</script>
+
+</body>
+</html>
