--- a/contact/index.html
+++ b/contact/index.html
@@ -1,41 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<meta name="theme-color" content="#0ea5e9" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
-<link rel="stylesheet" href="/css/base.css" />
-<link rel="stylesheet" href="/css/layout.css" />
-<link rel="stylesheet" href="/css/components.css" />
-<link rel="stylesheet" href="/css/utilities.css" />
-<title>Contact | Santhosh Kumar</title>
-<meta name="description" content="Contact details." />
-</head>
-<body>
-  <div data-include="partials/header.html"></div>
-  <main id="main" class="container">
-  <header class="page-header">
-    <h1>Contact</h1>
-    <p class="subtitle">Ways to connect.</p>
-  </header>
-  <section>
-    <p class="contact-cta">
-      <a class="btn-linkedin" href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener noreferrer">
-        <span>LinkedIn</span>
-      </a>
-    </p>
-    <p class="contact-email"><strong>Email:</strong> <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a></p>
-  </section>
+  <meta charset="utf-8" />
+  <title>Contact | Santhosh Kumar Chandrashekar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="description" content="Get in touch with Santhosh Kumar Chandrashekar." />
+  <meta name="theme-color" content="#0ea5e9" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Root-relative paths (works with sankum.in at root) -->
+  <link rel="stylesheet" href="/css/base.css" />
+  <link rel="stylesheet" href="/css/layout.css" />
+  <link rel="stylesheet" href="/css/components.css" />
+  <link rel="stylesheet" href="/css/utilities.css" />
+</head>
+
+<body>
+  <!-- Shared header (injected) -->
+  <div data-include="partials/header.html"></div>
+
+  <main id="main" class="container">
+    <header class="page-header">
+      <h1>Get in Touch</h1>
+      <p class="subtitle">
+        Drop a note using the form, or reach me on LinkedIn for quicker messaging.
+      </p>
+    </header>
+
+    <section class="contact-layout">
+      <!-- LEFT: Form Card -->
+      <div class="contact-card">
+        <h2 class="card-title">Send a message</h2>
+        <p class="card-subtitle">I usually respond within 24–48 hours.</p>
+
+        <form id="contactForm" class="contact-form"
+              action="https://formspree.io/f/xykpaerr"
+              method="POST" novalidate>
+
+          <input type="hidden" name="_subject" value="New message from sankum.in" />
+
+          <!-- Honeypot (spam trap). Humans won't fill this. -->
+          <label class="sr-only" for="company">Company</label>
+          <input class="sr-only" id="company" name="company" type="text" tabindex="-1" autocomplete="off" />
+
+          <div class="form-grid">
+            <div class="field">
+              <label for="firstName">First name</label>
+              <input id="firstName" name="firstName" type="text"
+                     placeholder="Enter your first name" required autocomplete="given-name" />
+            </div>
+
+            <div class="field">
+              <label for="lastName">Last name</label>
+              <input id="lastName" name="lastName" type="text"
+                     placeholder="Enter your last name" required autocomplete="family-name" />
+            </div>
+
+            <div class="field full">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email"
+                     placeholder="example@gmail.com" required autocomplete="email" />
+            </div>
+
+            <div class="field full">
+              <label for="subject">Subject</label>
+              <input id="subject" name="subject" type="text"
+                     placeholder="Subject" required />
+            </div>
+
+            <div class="field full">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="6"
+                        placeholder="Type here" required></textarea>
+            </div>
+          </div>
+
+          <button class="btn-submit" id="submitBtn" type="submit">
+            <span class="btn-label">Submit</span>
+            <span class="btn-spinner" aria-hidden="true"></span>
+          </button>
+
+          <p class="form-note">
+            Prefer email?
+            <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
+          </p>
+        </form>
+      </div>
+
+      <!-- RIGHT: Connect Card -->
+      <aside class="contact-card contact-card--side">
+        <h2 class="card-title">Other ways to connect</h2>
+        <p class="card-subtitle">If you prefer quick messaging, LinkedIn works great.</p>
+
+        <a class="btn-linkedin-card"
+           href="https://linkedin.com/in/sankum-chandra"
+           target="_blank" rel="noopener noreferrer">
+
+          <span class="li-icon-wrap" aria-hidden="true">
+            <!-- LinkedIn icon (inline SVG; no asset needed) -->
+            <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor" aria-hidden="true">
+              <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0.5 23.5h4V7.5h-4v16zM8.5 7.5h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4.1 0 4.8 2.7 4.8 6.2v9.8h-4v-8.7c0-2.1 0-4.7-2.9-4.7-2.9 0-3.3 2.2-3.3 4.6v8.8h-4v-16z"/>
+            </svg>
+          </span>
+
+          <span class="li-text">
+            <span class="li-title">Message me on LinkedIn</span>
+            <span class="li-subtitle">Fastest way to reach me</span>
+          </span>
+
+          <span class="li-arrow" aria-hidden="true">→</span>
+        </a>
+
+        <div class="contact-mini">
+          <div class="mini-label">Email</div>
+          <a href="mailto:sankum.chandra@outlook.com">sankum.chandra@outlook.com</a>
+        </div>
+      </aside>
+    </section>
+
+    <!-- Toast (animated by your CSS + contact-form.js) -->
+    <div class="toast" id="formToast" role="status" aria-live="polite" aria-atomic="true">
+      <span class="toast-icon" aria-hidden="true">✓</span>
+      <span class="toast-text" id="toastText">Message sent!</span>
+    </div>
   </main>
+
+  <!-- Shared footer (injected) -->
   <div data-include="partials/footer.html"></div>
+
+  <!-- Scripts -->
   <script src="/js/include.js"></script>
   <script src="/js/theme.js"></script>
   <script src="/js/menu.js"></script>
   <script src="/js/nav-active.js"></script>
 
+  <!-- Contact form (AJAX + animated toast) -->
+  <script src="/js/contact-form.js"></script>
 </body>
 </html>
