--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
   <section class="focus-grid" aria-labelledby="focusTitle">
     <h2 id="focusTitle">Strategic Focus Areas</h2>
     <div class="grid">
-      <article class="card"><img src="/assets/images/focus-ea.webp" alt="Enterprise Architecture &amp; Target-State Design" /><h3>Enterprise Architecture &amp; Target-State Design</h3><p>Defining future-state architectures and guiding organisations toward scalable, secure digital foundations.</p></article>
+      <article class="card"><img src="/assets/images/focus-tech-strategy.webp" alt="A typical engagement includes:" /><h3>A typical engagement includes:</h3>
+        <p>Clarifying the technology direction through target-state and roadmap definition</p>
+        <p>Aligning cloud adoption and platform engineering with business priorities</p>
+        <p>Improving delivery efficiency through DevSecOps and engineering standards</p>
+        <p>Establishing guardrails that enable velocity without compromising governance</p></article>
     </div>
   </section>
 
