--- a/index.html
+++ b/index.html
@@ -27,15 +27,30 @@
   </section>
 
   <section class="focus-grid" aria-labelledby="focusTitle">
-    <h2 id="focusTitle">Strategic Focus Areas</h2>
-    <div class="grid">
-      <article class="card"><img src="/assets/images/focus-tech-strategy.webp" alt="A typical engagement includes:" /><h3>A typical engagement includes:</h3>
-        <p>Clarifying the technology direction through target-state and roadmap definition</p>
-        <p>Aligning cloud adoption and platform engineering with business priorities</p>
-        <p>Improving delivery efficiency through DevSecOps and engineering standards</p>
-        <p>Establishing guardrails that enable velocity without compromising governance</p></article>
-    </div>
-  </section>
+  <h2 id="focusTitle">Strategic Focus Areas</h2>
+
+  <div class="grid">
+    <article class="card focus-card">
+      <img src="/assets/images/focus-tech-strategy.webp" alt="Strategic Focus Areas" />
+
+      <div class="card-body">
+        <h3>A typical engagement includes:</h3>
+
+        <ul class="focus-list">
+  <li>Clarifying the technology direction through target-state and roadmap definition</li>
+  <li>Aligning cloud adoption and platform engineering with business priorities</li>
+  <li>Improving delivery efficiency through DevSecOps and engineering standards</li>
+  <li>Establishing guardrails that enable velocity without compromising governance</li>
+</ul>
+
+        <a href="/focus.html" class="cta-focus">
+          Explore My Focus Areas →
+        </a>
+      </div>
+    </article>
+  </div>
+
+</section>
 
   <section class="case-grid-compact" aria-labelledby="homeInitTitle">
     <h2 id="homeInitTitle">Featured Initiatives</h2>
