--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <li>Establishing guardrails that enable velocity without compromising governance</li>
 </ul>
 
-        <a href="/focus.html" class="cta-focus">
+        <a href="/focus/" class="cta-focus">
           Explore My Focus Areas →
         </a>
       </div>
