Revise description of professional expertise
Updated the description paragraph to reflect new responsibilities and focus on enterprise cloud transformations.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
       <h1>Santhosh Kumar Chandrashekar</h1>
       <p class="subtitle">TOGAF® Certified Architect<br/>Cloud &amp; DevOps Portfolio Strategic Leader</p>
-      <p>I help organisations modernize with confidence by shaping cloud, platform, and DevOps strategy that enables scale, resilience, and long-term business value.</p>
+      <p>I architect and lead enterprise cloud transformations that accelerate delivery, strengthen governance, and build resilient platforms at scale.</p>
     </div>
   </section>
 
