--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,9 @@
   <section>
     <p>I’m a TOGAF®-certified Architect with 14+ years of experience across cloud, DevOps, solution architecture, platform engineering, and operations. Today, I specialise in Cloud &amp; DevOps Portfolio Architecture within the Enterprise Architecture structure, focusing on target-state design, technology roadmapping, and platform strategies that reduce complexity and enable sustainable enterprise transformation.</p>
     <p><strong><em>"At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction."</em></strong></p>
+<blockquote style="border-left:4px solid #0ea5e9; padding-left:16px; margin:30px 0; font-style:italic;">
+      At the centre of my approach is a belief that architecture should provide clarity, direction, and enablement — not friction.
+    </blockquote>
     <p>My goal is to design technology foundations and roadmaps that evolve with the organisation, support modern ways of working, and deliver long-term business value.</p>
   </section>
 
