--- a/insights/enterprise-finops-strategy.html
+++ b/insights/enterprise-finops-strategy.html
@@ -39,7 +39,7 @@
     <h2>Why FinOps Matters at Enterprise Scale</h2>
     <p>Cloud introduces a consumption-based financial model that traditional IT budgeting practices were never designed to handle. Without visibility, accountability, and optimization mechanisms, costs grow unpredictably. A FinOps strategy ensures cloud spending aligns directly with measurable business outcomes.</p>
 
-    <blockquote style="border-left:4px solid #0ea5e9; padding-left:16px; margin:30px 0; font-style:italic;">
+    <blockquote class="signature-quote">
       FinOps is not just cost control — it is value optimization.
     </blockquote>
 
