--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -4,39 +4,72 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
+
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet" />
+
 <link rel="stylesheet" href="/css/base.css" />
 <link rel="stylesheet" href="/css/layout.css" />
 <link rel="stylesheet" href="/css/components.css" />
 <link rel="stylesheet" href="/css/utilities.css" />
-<title>About | Santhosh Kumar</title>
-<meta name="description" content="About Santhosh Kumar Chandrashekar." />
+
+<title>Initiatives | Santhosh Kumar Chandrashekar</title>
+<meta name="description" content="Strategic initiatives led." />
 </head>
+
 <body>
-  <div data-include="partials/header.html"></div>
-  <main id="main" class="container">
-  <header class="page-header">
-    <h1>Initiatives</h1>
-    <p class="subtitle">Strategic initiatives led — click a card for details.</p>
-  </header>
-  <section class="case-grid-compact">
-    <div class="grid" id="initiativesContainer"><p class="section-note">Loading initiatives…</p></div>
-    <div class="pagination-controls">
-      <button id="initPrev" disabled>← Previous</button>
-      <span id="initPageInfo" class="page-info"></span>
-      <button id="initNext">Next →</button>
+
+<div data-include="partials/header.html"></div>
+
+<main id="main">
+
+  <section class="page-header">
+    <div class="page-container">
+      <h1>Initiatives</h1>
+      <p class="subtitle">
+        Strategic initiatives led — click a card for details.
+      </p>
     </div>
   </section>
 
-  </main>
-  <div data-include="partials/footer.html"></div>
-  <script src="/js/include.js"></script>
-  <script src="/js/theme.js"></script>
-  <script src="/js/menu.js"></script>
-  <script src="/js/nav-active.js"></script>
-  <script>setupPagination({dataUrl:'/data/initiatives.json',containerId:'initiativesContainer',prevBtnId:'initPrev',nextBtnId:'initNext',pageInfoId:'initPageInfo',ctaText:'More details →',perPage:6});</script>
+  <section class="case-grid-compact">
+    <div class="page-container">
+
+      <div class="grid" id="initiativesContainer">
+        <p class="section-note">Loading initiatives…</p>
+      </div>
+
+      <div class="pagination-controls">
+        <button id="initPrev" disabled>← Previous</button>
+        <span id="initPageInfo" class="page-info"></span>
+        <button id="initNext">Next →</button>
+      </div>
+
+    </div>
+  </section>
+
+</main>
+
+<div data-include="partials/footer.html"></div>
+
+<script src="/js/include.js"></script>
+<script src="/js/theme.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/nav-active.js"></script>
+<script src="/js/pagination.js"></script>  <!-- 🔥 THIS WAS MISSING -->
+
+<script>
+setupPagination({
+  dataUrl:'/data/initiatives.json',
+  containerId:'initiativesContainer',
+  prevBtnId:'initPrev',
+  nextBtnId:'initNext',
+  pageInfoId:'initPageInfo',
+  ctaText:'More details →',
+  perPage:6
+});
+</script>
 
 </body>
 </html>
