--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN9DGYGE9E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZN9DGYGE9E');
+</script>
   <meta charset="utf-8" />
   <title>Contact | Santhosh Kumar Chandrashekar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
