--- a/insights/enterprise-finops-strategy.html
+++ b/insights/enterprise-finops-strategy.html
@@ -1,7 +1,15 @@
- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN9DGYGE9E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZN9DGYGE9E');
+</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <meta name="theme-color" content="#0ea5e9" />
